foi adicionado a pasta css , e fui realizado a estilização das paginas

--- a/modulo1/html-sistema-loja/template-loja/add-produto.html
+++ b/modulo1/html-sistema-loja/template-loja/add-produto.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet" type="text/css" href="style/add-produto.css">
 </head>
 <body>
     <div>
-        <p>Nome da lojinha</p>
+        <header>
+              <h1 id="titulo"> <em>La Casa do Pão</em>!</h1>
+          </header>
     </div>
     
     <div>
@@ -46,10 +49,15 @@
 
         <div class="form-add">
             <!-- Adicione ao type do botão abaixo o valor para que ele submeta o formulário -->
-            <button type="button">Adicionar</button>
+            <button id ="botao"type="button">Adicionar</button>
         </div>
 
     </form>
+    <div>
+        <footer>
+          <p>Em desenvolvimento</p>
+      </footer>
+    </div>
 
 </body>
 </html>
