--- a/modulo1/html-sistema-loja/template-loja/funcionarios.html
+++ b/modulo1/html-sistema-loja/template-loja/funcionarios.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style/funcionarios.css">
     <title>Funcionários</title>
 </head>
 <body>
-    <div>
-        <p>Nome da loja</p>
-    </div>
-    
+    <header>
+        <h1 id="titulo"> <em>La Casa do Pão</em>!</h1>
+    </header>
     <div>
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
@@ -26,5 +26,10 @@
        <li>Vinicius Silva</li>
       
    </Ul>
+   <div>
+    <footer>
+      <p>Em desenvolvimento</p>
+ </footer>
+</div>
 </body>
 </html>
