--- a/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style/ctrl-estoque.css">
     <title>Controle de Estoque</title>
 </head>
 <body>
     <div>
-        <p>Nome da lojinha</p>
+        <header>
+              <h1 id="titulo"> <em>La Casa do Pão</em>!</h1>
+          </header>
     </div>
-    
     <div>
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
@@ -20,7 +22,7 @@
 
     <h2>Controle de Estoque</h2>
 
-    <table>
+    <table id="tabela"t> 
         <tr>
             <th>Foto</th>
             <th>Descrição</th>
@@ -65,6 +67,10 @@
         </tr>
 
     </table>
-
+    <div>
+        <footer>
+          <p>Em desenvolvimento</p>
+     </footer>
+    </div>
 </body>
 </html>
