--- a/modulo1/html-sistema-loja/template-loja/index.html
+++ b/modulo1/html-sistema-loja/template-loja/index.html
@@ -5,33 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nome da Loja</title>
+    <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
     <div>
-        <h1>Bem-vind@ a <em>La Casa do Pao</em>!</h1>
-        <p>Aqui as coisas sempre são bem planejadas </p>
+        <header>
+              <h1 id="titulo">Bem-vind@ a <em>La Casa do Pão</em>!</h1>
+          </header>
+    </div>
+    <div >
+    
+        <p id="subTitulo">Aqui as coisas sempre são bem planejadas </p>
     </div>
 
-    <div>
+    <div id="menu">
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
     </div>
 
-    <div>
+    <div id="informacoes">
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
-        <b>asadasdasdasd</b>
+        <b>Em desenvolvimento...</b>
     </div>
 
-    <div>
+    <div id="redeSocial">
         <p>Siga-nos nas redes sociais!</p>
 
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
-        </div>
+        <div class="container">
+            <img src="img/whatsapp.png" alt="whatsapp"/>
+            <img src="img/facebook.png"/ alt="facebook">
+            <img src="img/instagram.png"/ alt="instagram">
+        </divi>
+    </div>
+    <div>
+        <footer>
+          <p>Em desenvolvimento</p>
+     </footer>
     </div>
 </body>
 </html>
