--- a/modulo1/css-labetube/video.html
+++ b/modulo1/css-labetube/video.html
@@ -10,7 +10,6 @@
 <body>
     <header>
         <div>
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffavpng.com%2Fpng_view%2Fvideo-icon-icon-png%2Fu062aYc4&psig=AOvVaw3l-HtJKue5oRpjCsG0CUHp&ust=1647485070486000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCMjIzbrOyfYCFQAAAAAdAAAAABAD" />
             <h3>LABENU Video</h3>
         </div>
 
@@ -27,7 +26,7 @@
         <div id="conteudo">
            
             <div>
-                <video width="1080" height="240*4" controls>
+                <video width="1080" height="240*4" controls autoplay> 
                     <source src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" type="video/mp4">
                   </video>
                 <a href="https://www.youtube.com">
